added css, partials, and more content

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,8 @@
 
 
 {% block content %}
-    <h1>Hello World</h1>
-    <h2>About Me Page</h2>
+    <h1>About Me Page</h1>
+    <p>This is my about me page.</p>
 {% endblock content %}
 
 
