--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,7 @@
 
 {% block content %}
     <h1>Hola Mundo</h1>
-    <h2>Home Page</h2>
+    <h3>This is the home page of the Snacks App</h3>
+    <p>Some content will be here, I just dont know what that will be!</p>
+    <p>Django is cool!!</p>
 {% endblock content %}
